# CosmOS

./: .env.example  .gitignore  .last-sync  ARCHITECTURE.md  README.md  ROADMAP.md  SERVICE.md  cosmos.yaml  pyproject.toml  restart.sh  start.sh  stop.sh
configs/: cosmos.example.yaml
docs/: glossary.md  mvp-scenarios.md  os-build-plan.md  references.md  tech-stack.md  web-ui-guidelines.md
notes/: ideas.md
scripts/: auto-sync.sh
src/cosmos/: __init__.py  cli.py  config.py
src/cosmos/agents/: __init__.py  base.py  claude_agent.py  hermes_agent.py  opencode_agent.py  remote_agent.py  shell_agent.py  ssh_runner.py  verifier.py  worktree.py
src/cosmos/core/: __init__.py  router.py  state.py
src/cosmos/interfaces/: api.py  telegram_bot.py
src/cosmos/memory/: __init__.py  obsidian_memory.py  sqlite_memory.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  api.js  app.css
ui/src/lib/: Card.svelte  ChatBubble.svelte  Header.svelte  Sidebar.svelte
ui/src/pages/: Agents.svelte  Chat.svelte  Memory.svelte  MissionControl.svelte  Settings.svelte  TaskDetail.svelte  Tasks.svelte
