[project]
name = "cosmos"
version = "0.1.0"
description = "CosmOS — настраиваемая агентная ОС"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-telegram-bot>=21.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmos"]

[tool.ruff]
line-length = 100

[tool.uv]
dev-dependencies = []

[project.scripts]
cosmos = "cosmos.cli:main"
